--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="mycss.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -20,35 +21,16 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">我的記帳本</a>
-                <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="collapsibleNavId">
-                    <!-- <ul class="navbar-nav me-auto mt-2 mt-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#" aria-current="page">Home
-                                <span class="visually-hidden">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                            <div class="dropdown-menu" aria-labelledby="dropdownId">
-                                <a class="dropdown-item" href="#">Action 1</a>
-                                <a class="dropdown-item" href="#">Action 2</a>
-                            </div>
-                        </li>
-                    </ul> -->
-                    <form class="d-flex my-2 my-lg-0 ms-auto">
-                        <input class="form-control me-sm-2" type="text" placeholder="Search" />
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-                            Search
-                        </button>
-                    </form>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                        全部
+                    </button>
+                    <ul class="dropdown-menu" id="selectMonth">
+                        <!-- <li><a class="dropdown-item" href="#" data-key=1>1</a></li>
+                        <li><a class="dropdown-item" href="#" data-key=2>2</a></li>
+                        <li><a class="dropdown-item" href="#" data-key=3>3</a></li>
+                         -->
+                    </ul>
                 </div>
             </div>
         </nav>
@@ -57,20 +39,42 @@
     <main>
         <div class="container">
             <div class="btn-group btn-group-lg m-3 d-flex" aria-label="amount">
-                <button type="button" class="btn btn-light">Left</button>
-                <button type="button" class="btn btn-light">Middle</button>
-                <button type="button" class="btn btn-light">Right</button>
+                <button type="button" class="btn btn-outline-secondary btn-light w-100">收入<br><span id="incomeSpan">0</span></button>
+                <button type="button" class="btn btn-outline-secondary btn-light w-100">支出<br><span id="paySpan">0</span></button>
+                <button type="button" class="btn btn-outline-secondary btn-light w-100">結餘<br><span id="totalSpan">0</span></button>
+            </div>
+        
+            <div class="cards" id="cards">
+                <!--顯示indexeddb資料庫資料-->
+                <div id="card-item"></div>
+            </div>
+
+            <button type="button" class="Add btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">
+                Add
+            </button>
+    
+        </div>
+    </main>
+
+    <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="addModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="addModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
             </div>
         </div>
+    </div>
 
-        <div class="container">
-
-        </div>
-
-
-        <button class="add">Add</button>
-
-    </main>
     <footer>
 
 
