--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div id="card-item"></div>
             </div>
 
-            <button type="button" class="Add btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">
+            <button type="button" class="add btn btn-secondary" data-bs-toggle="modal" data-bs-target="#addModal">
                 Add
             </button>
     
@@ -60,16 +60,20 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="addModalLabel">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+                <h5 class="modal-title" id="addModalLabel">
+                <select name="addKind" id="addKind" class="form-select">
+                    <option value="pay" selected>支出
+                    <option value="income">收入
+                </select>
+                </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </button>
             </div>
             <div class="modal-body">
                 ...
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-primary">添加</button>
             </div>
             </div>
         </div>
