add basic card layout example

--- a/index.html
+++ b/index.html
@@ -46,7 +46,22 @@
         
             <div class="cards" id="cards">
                 <!--顯示indexeddb資料庫資料-->
-                <div id="card-item"></div>
+                <div class="card">
+                    <div class="card-header d-flex bg-danger bg-opacity-75 justify-content-between">
+                        <h6>Date</h6><h6 class="ms-auto">支出</h6>
+                    </div>
+                    <div class="card-body d-flex">
+                        <p>Test</p><p class="ms-auto">-50</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header d-flex bg-success bg-opacity-75 justify-content-between">
+                        <h6>Date</h6><h6 class="ms-auto">收入</h6>
+                    </div>
+                    <div class="card-body d-flex">
+                        <p>Test</p><p class="ms-auto">+50</p>
+                    </div>
+                </div>
             </div>
 
             <button type="button" class="add btn btn-secondary" data-bs-toggle="modal" data-bs-target="#addModal">
