--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
     <link rel="stylesheet" href="mycss.css">
     <script src="script.js"></script>
 </head>
-
+<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+    <symbol id="pay" viewBox="0 0 16 16">
+        <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4"/>
+        <path d="M0 4a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1zm3 0a2 2 0 0 1-2 2v4a2 2 0 0 1 2 2h10a2 2 0 0 1 2-2V6a2 2 0 0 1-2-2z"/>
+    </symbol>
+    <symbol id="bank" viewBox="0 0 16 16">
+        <path d="M5 6.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0m1.138-1.496A6.6 6.6 0 0 1 7.964 4.5c.666 0 1.303.097 1.893.273a.5.5 0 0 0 .286-.958A7.6 7.6 0 0 0 7.964 3.5c-.734 0-1.441.103-2.102.292a.5.5 0 1 0 .276.962"/>
+        <path fill-rule="evenodd" d="M7.964 1.527c-2.977 0-5.571 1.704-6.32 4.125h-.55A1 1 0 0 0 .11 6.824l.254 1.46a1.5 1.5 0 0 0 1.478 1.243h.263c.3.513.688.978 1.145 1.382l-.729 2.477a.5.5 0 0 0 .48.641h2a.5.5 0 0 0 .471-.332l.482-1.351c.635.173 1.31.267 2.011.267.707 0 1.388-.095 2.028-.272l.543 1.372a.5.5 0 0 0 .465.316h2a.5.5 0 0 0 .478-.645l-.761-2.506C13.81 9.895 14.5 8.559 14.5 7.069q0-.218-.02-.431c.261-.11.508-.266.705-.444.315.306.815.306.815-.417 0 .223-.5.223-.461-.026a1 1 0 0 0 .09-.255.7.7 0 0 0-.202-.645.58.58 0 0 0-.707-.098.74.74 0 0 0-.375.562c-.024.243.082.48.32.654a2 2 0 0 1-.259.153c-.534-2.664-3.284-4.595-6.442-4.595M2.516 6.26c.455-2.066 2.667-3.733 5.448-3.733 3.146 0 5.536 2.114 5.536 4.542 0 1.254-.624 2.41-1.67 3.248a.5.5 0 0 0-.165.535l.66 2.175h-.985l-.59-1.487a.5.5 0 0 0-.629-.288c-.661.23-1.39.359-2.157.359a6.6 6.6 0 0 1-2.157-.359.5.5 0 0 0-.635.304l-.525 1.471h-.979l.633-2.15a.5.5 0 0 0-.17-.534 4.65 4.65 0 0 1-1.284-1.541.5.5 0 0 0-.446-.275h-.56a.5.5 0 0 1-.492-.414l-.254-1.46h.933a.5.5 0 0 0 .488-.393m12.621-.857a.6.6 0 0 1-.098.21l-.044-.025c-.146-.09-.157-.175-.152-.223a.24.24 0 0 1 .117-.173c.049-.027.08-.021.113.012a.2.2 0 0 1 .064.199"/>
+    </symbol>
+</svg>
 <body>
 
 
@@ -46,20 +55,26 @@
         
             <div class="cards" id="cards">
                 <!--顯示indexeddb資料庫資料-->
-                <div class="card">
+                <div class="card m-3">
                     <div class="card-header d-flex bg-danger bg-opacity-75 justify-content-between">
-                        <h6>Date</h6><h6 class="ms-auto">支出</h6>
+                        <h6 class="m-2">Date</h6><h6 class="mt-2  ms-auto">支出</h6>
                     </div>
                     <div class="card-body d-flex">
-                        <p>Test</p><p class="ms-auto">-50</p>
+                        <svg class="m-1" width="36" height="36">
+                            <use xlink:href="#pay"></use>
+                        </svg>
+                        <p class="card-text m-2">Test</p><p class="mt-2  ms-auto">-50</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card m-3">
                     <div class="card-header d-flex bg-success bg-opacity-75 justify-content-between">
-                        <h6>Date</h6><h6 class="ms-auto">收入</h6>
+                        <h6 class="m-2">Date</h6><h6 class="mt-2 ms-auto">收入</h6>
                     </div>
                     <div class="card-body d-flex">
-                        <p>Test</p><p class="ms-auto">+50</p>
+                        <svg class="m-1" width="36" height="36">
+                            <use xlink:href="#bank"></use>
+                        </svg>
+                        <p class="card-text m-2">Test</p><p class="mt-2 ms-auto">+50</p>
                     </div>
                 </div>
             </div>
