add save and display function

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         
             <div class="cards" id="cards">
                 <!--顯示indexeddb資料庫資料-->
-                <div class="card m-3">
+                <!-- <div class="card m-3">
                     <div class="card-header d-flex bg-danger bg-opacity-75 justify-content-between">
                         <h6 class="m-2">Date</h6><h6 class="mt-2  ms-auto">支出</h6>
                     </div>
@@ -76,7 +76,7 @@
                         </svg>
                         <p class="card-text m-2">Test</p><p class="mt-2 ms-auto">+50</p>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <button type="button" class="add btn btn-secondary" data-bs-toggle="modal" data-bs-target="#addModal">
@@ -114,15 +114,13 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" id="saveBtn">添加</button>
+                <button type="button" class="btn btn-primary" id="saveBtn" data-bs-dismiss="modal">添加</button>
             </div>
             </div>
         </div>
     </div>
 
     <footer>
-
-
 
     </footer>
     <!-- Bootstrap JavaScript Libraries -->
